adding two strings related to showing a Rate Us prompt

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -571,6 +571,7 @@
     <string name="share_text">Ey! gəl sən də %2$s\'də %1$s\'ə nəzər yetir!</string>
     <string name="invite_via">Dəvət et</string>
     <string name="rate_us_underlined"><u>Dəyərləndir</u></string>
+    <string name="rate">Rate</string>
     <string name="donate">İanə et</string>
     <string name="donate_underlined"><u>İanə et</u></string>
     <string name="follow_us">İzlə</string>
@@ -589,6 +590,7 @@
     <string name="update_thank_you">Xahiş olunur Sadə Təşəkkür tətbiqini ən son versiyaya yeniləyin</string>
     <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Read it</string>
+    <string name="rate_us_prompt">Hello,\n\nit looks like you are using this app for quite a while already, and we really appreciate it.\n\nIf we can ask you a favor, please rate us on Google Play. That would really help us a lot.\n\nNo matter how you decide, you will not see this message again.\n\nThanks!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
