--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -538,6 +538,7 @@
     <string name="share_text">%2$s で %1$s を確認してください</string>
     <string name="invite_via">招待</string>
     <string name="rate_us_underlined"><u>Playストアで評価してください</u></string>
+    <string name="rate">Rate</string>
     <string name="donate">寄付</string>
     <string name="donate_underlined"><u>寄付</u></string>
     <string name="follow_us">フォローしてください</string>
@@ -556,6 +557,7 @@
     <string name="update_thank_you">\"Simple Thank You\" アプリを最新版に更新してください</string>
     <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Read it</string>
+    <string name="rate_us_prompt">Hello,\n\nit looks like you are using this app for quite a while already, and we really appreciate it.\n\nIf we can ask you a favor, please rate us on Google Play. That would really help us a lot.\n\nNo matter how you decide, you will not see this message again.\n\nThanks!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
