--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -604,6 +604,7 @@
     <string name="share_text">Čauko, skús %1$s na %2$s</string>
     <string name="invite_via">Pozvať cez</string>
     <string name="rate_us_underlined"><u>Ohodnotiť aplikáciu</u></string>
+    <string name="rate">Ohodnotiť</string>
     <string name="donate">Podporiť</string>
     <string name="donate_underlined"><u>Podporiť</u></string>
     <string name="follow_us">Sledujte nás</string>
@@ -622,6 +623,7 @@
     <string name="update_thank_you">Prosím aktualizujte Jednoduché Ďakujem na najnovšiu verziu</string>
     <string name="before_asking_question_read_faq">Predtým, ako sa niečo opýtate, si prosím prejdite nastavenia aplikácie a prečítajte Často Kladené Otázky. Možno v nich nájdete svoju odpoveď.</string>
     <string name="read_it">Prečítať</string>
+    <string name="rate_us_prompt">Zdravím,\n\nzdá sa, že už nejaký čas používate túto aplikáciu a to si veľmi ceníme.\n\nAk Vás môžeme požiadať o láskavosť, prosím ohodnoťte nás na Google Play. Naozaj by nám to veľmi pomohlo.\n\nBez ohľadu na to, ako sa rozhodnete, túto správu už neuvidíte.\n\nVďaka!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
