--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -570,6 +570,7 @@
     <string name="share_text">Посетите %1$s на %2$s</string>
     <string name="invite_via">Позовите преко</string>
     <string name="rate_us_underlined"><u>Оцените нас</u></string>
+    <string name="rate">Rate</string>
     <string name="donate">Донирај</string>
     <string name="donate_underlined"><u>Донирај</u></string>
     <string name="follow_us">Запратите нас</string>
@@ -588,6 +589,7 @@
     <string name="update_thank_you">Молимо вас ажурирајте Simple Thank You на најскорију верзију</string>
     <string name="before_asking_question_read_faq">Пре постављања питања проверите подешавања апликације и прочитајте најчешће постављана питања. Можда су решења већ ту.</string>
     <string name="read_it">Прочитајте</string>
+    <string name="rate_us_prompt">Hello,\n\nit looks like you are using this app for quite a while already, and we really appreciate it.\n\nIf we can ask you a favor, please rate us on Google Play. That would really help us a lot.\n\nNo matter how you decide, you will not see this message again.\n\nThanks!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
