--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -571,6 +571,7 @@
     <string name="share_text">अरे, %1$s को %2$s पर देखो</string>
     <string name="invite_via">के माध्यम से आमंत्रित</string>
     <string name="rate_us_underlined"><u>हमे प्ले स्टोर पर रेट करें</u></string>
+    <string name="rate">Rate</string>
     <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
     <string name="follow_us">हमे फॉलो करें</string>
@@ -589,6 +590,7 @@
     <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
     <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Read it</string>
+    <string name="rate_us_prompt">Hello,\n\nit looks like you are using this app for quite a while already, and we really appreciate it.\n\nIf we can ask you a favor, please rate us on Google Play. That would really help us a lot.\n\nNo matter how you decide, you will not see this message again.\n\nThanks!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
