--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -538,6 +538,7 @@
     <string name="share_text">%1$s 애플리케이션을 다운받으세요. %2$s</string>
     <string name="invite_via">애플리케이션 선택</string>
     <string name="rate_us_underlined"><u>앱 평가하기</u></string>
+    <string name="rate">Rate</string>
     <string name="donate">기부</string>
     <string name="donate_underlined"><u>기부하기</u></string>
     <string name="follow_us">Follow us</string>
@@ -559,6 +560,7 @@
     <string name="update_thank_you">Please update Simple Thank You to the latest version</string>
     <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
     <string name="read_it">Read it</string>
+    <string name="rate_us_prompt">Hello,\n\nit looks like you are using this app for quite a while already, and we really appreciate it.\n\nIf we can ask you a favor, please rate us on Google Play. That would really help us a lot.\n\nNo matter how you decide, you will not see this message again.\n\nThanks!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
