--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -571,6 +571,7 @@
     <string name="share_text">Olá, experimenta %1$s em %2$s</string>
     <string name="invite_via">Convidar por</string>
     <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
+    <string name="rate">Rate</string>
     <string name="donate">Donativos</string>
     <string name="donate_underlined"><u>Donativos</u></string>
     <string name="follow_us">Siga-nos</string>
@@ -589,6 +590,7 @@
     <string name="update_thank_you">Por favor atualize a aplicação Simple Thank You para a versão mais recente</string>
     <string name="before_asking_question_read_faq">Antes de colocar uma questão, verifique as FAQ. Pode ser que a solução esteja lá.</string>
     <string name="read_it">Ler</string>
+    <string name="rate_us_prompt">Hello,\n\nit looks like you are using this app for quite a while already, and we really appreciate it.\n\nIf we can ask you a favor, please rate us on Google Play. That would really help us a lot.\n\nNo matter how you decide, you will not see this message again.\n\nThanks!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
