adding a new string for No new items found

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Saving…</string>
     <string name="could_not_create_folder">Could not create folder %s</string>
     <string name="could_not_create_file">Could not create file %s</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Create new</string>
