--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Saxlanılır…</string>
     <string name="could_not_create_folder">%s qovluğunu yaratmaq olmur</string>
     <string name="could_not_create_file">%s faylını yaratmaq olmur</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Yeni yarat</string>
