--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Spremanje…</string>
     <string name="could_not_create_folder">Nije moguće stvoriti mapu %s</string>
     <string name="could_not_create_file">Nije moguće stvoriti datoteku %s</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Stvori novo</string>
