--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Menyimpan…</string>
     <string name="could_not_create_folder">Tidak dapat membuat folder %s</string>
     <string name="could_not_create_file">Tidak dapat membuat file %s</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Buat baru</string>
