--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Lagrer…</string>
     <string name="could_not_create_folder">Kunne ikke opprette mappen %s</string>
     <string name="could_not_create_file">Kunne ikke opprette filen %s</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Opprett ny</string>
