--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Shranjevanje…</string>
     <string name="could_not_create_folder">Mape %s ni bilo mogoče ustvariti</string>
     <string name="could_not_create_file">Datoteke %s ni bilo mogoče ustvariti</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Ustvari novo</string>
