--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Tallennetaan</string>
     <string name="could_not_create_folder">Ei voitu luoda kansiota %s</string>
     <string name="could_not_create_file">Ei voitu luoda tiedostoa %s</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Luo uusi</string>
