--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Išsaugoma…</string>
     <string name="could_not_create_folder">Negalima sukurti aplanko %ų</string>
     <string name="could_not_create_file">Negalima sukurti bylos %ų</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Kurti naują</string>
