--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -90,6 +90,7 @@
     <string name="saving">Чувам…</string>
     <string name="could_not_create_folder">Не могу да направим фасциклу %s</string>
     <string name="could_not_create_file">Не могу да направим датотеку %s</string>
+    <string name="no_new_items">No new items have been found</string>
 
     <!-- Create new -->
     <string name="create_new">Направи ново</string>
