--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -90,7 +90,7 @@
     <string name="saving">Αποθηκεύεται…</string>
     <string name="could_not_create_folder">Αδύνατη η δημιουργία του φακέλου %s</string>
     <string name="could_not_create_file">Αδύνατη η δημιουργία του αρχείου %s</string>
-    <string name="no_new_items">No new items have been found</string>
+    <string name="no_new_items">Δεν βρέθηκαν νέα στοιχεία</string>
 
     <!-- Create new -->
     <string name="create_new">Δημιουργία νέου</string>
