closing some string tags

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -253,7 +253,7 @@
     <string name="maybe">Možná</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">UPOZORNĚNÍ: Chystáte se smazat %d složku/item>
+        <item quantity="one">UPOZORNĚNÍ: Chystáte se smazat %d složku</item>
         <item quantity="few">UPOZORNĚNÍ: Chystáte se smazat %d složky</item>
         <item quantity="other">UPOZORNĚNÍ: Chystáte se smazat %d složek</item>
     </plurals>
@@ -483,7 +483,7 @@
     <string name="recycle_bin_cleaning_interval">Interval vysypání koše</string>
     <string name="empty_recycle_bin">Vysypat odpadkový koš</string>
     <string name="force_portrait_mode">Vynutit zobrazení na výšku</string>
-    <string name="export_settings">Export nastavení/string>
+    <string name="export_settings">Export nastavení</string>
     <string name="import_settings">Import nastavení</string>
     <string name="settings_exported_successfully">Nastavení bylo úspěšně exportováno</string>
     <string name="settings_imported_successfully">Nastavení bylo úspěšně importováno</string>
